user-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  type: ClusterIP
  selector:
    app: user-service-service
  ports:
    - port: 80
      targetPort: 3000
